[package]
name = "embedded-graphics-demo"
version = "0.1.0"
authors = ["Justin Moon <mail@justinmoon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.6.2"
embedded-graphics-simulator = "0.2.0"
bitcoin = "0.23.0"


[dev-dependencies.bitcoin]
version = "0.23"
features = ["rand"]
